Use new Encoding class instead of "UTF-8" string